--- a/me.html
+++ b/me.html
@@ -141,10 +141,12 @@
                                 their environment, whether that is humans, animals or other systems.
                                 Systems engineering combines all aspects of modern engineering to construct, visualize
                                 and improve the way we experience the world, and beyond. 🚀
-                            </p><a href="https://uwaterloo.ca/systems-design-engineering/about-systems-design-engineering/what-systems-design-engineering" target="_blank">Learn about Systems...</a></p>
+                            </p><a
+                                href="https://uwaterloo.ca/systems-design-engineering/about-systems-design-engineering/what-systems-design-engineering"
+                                target="_blank">Learn about Systems...</a></p>
                             <div class="button-space">
                                 <button class="button-des" id="screaming-button"
-                                    onclick="scrollToEl('next-sec',null)">Learn more</button>
+                                    onclick="scrollToEl('next-sec',null)">Learn more about me</button>
                             </div>
 
                         </div>
@@ -152,75 +154,38 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12" id="next-sec">
-                        <div class="user-mountains"></div>
+                        <div class="user-mountains">
+                            <div class="user-mountains-trees">
+                                <div class="user-mountains-rocks">
+                                    <h2 class="display-4 bold-text-mountains">From Vancouver BC, ventrue everywhere</h2>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="spacer"></div>
-                <div class="row">
+                <div class="row second-section">
                     <div class="col-sm-6">
-                        <iframe class="arduino-screaming-embed" src="arduino_screaming.html">It Looks like your browser
-                            does not support the <code>iframe tag :(</code></iframe>
+                        <div class="personal-image"></div>
                     </div>
                     <div class="col-sm-6">
                         <div class="text-container">
                             <h2 class="bc-ferries-h2">
-                                Safe, Photo Gallery
+                                Technology is our most powerful tool.
                             </h2>
                             <p class="why-the-safe-para">
-                                Check out the photo gallery of the completed project!
+                                We have a responsability to use it to improve the lives of all people, and the
+                                environment.
                             </p>
+                            <p>As someone who advocates optimized engineering solutions, I continue on my journey to
+                                find the most eloquent and beautiful solutions to the worlds most challening problems. I
+                                have always taken an interest in the way humans interact with technology, and more
+                                specifically, the way it shapes our experiences.</p>
                             <div class="button-space">
-                                <a href="https://www.flickr.com/photos/184079531@N08/albums/72157710664499506"
-                                    target="_blank">
-                                    <button class="button-des" id="screaming-button">Explore Photos</button>
-                                </a>
-                            </div>
-                            <p>
-                                The facts:
-                                <ul>
-                                    <li>289 lines of code</li>
-                                    <li>3 interrupts</li>
-                                    <li>28 hours of work</li>
-                                    <li>31 commits</li>
-                                </ul>
-                            </p>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="spacer"></div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="text-container left-side" id="how-it-works">
-                            <h2 class="bc-ferries-h2">
-                                Gangl, Design Case Study
-                            </h2>
-                            <p class="why-the-safe-para">
-                                in 2017, 90% of students reported that they were stressed and overworked during their
-                                post-secondary education. the Gangl App, is a platform designed and prototyped to combat
-                                stress caused by workload in undergraduate students.
-                            </p>
-                            <p>
-                                The app was designed and prototyped using marvel design studio. the project followed the
-                                iterative design process to the book. it begain with the definition of a problem
-                                statement, identificaiton of key stakeholders and users and intensive reseach.
-                                A QFD and various other design tools were used to quantify specific aspects of the
-                                design. finally the project was iterativly designed from low fidelity, through high
-                                fidelity prototypes. It was presented as a final high fidelity prototype at the end of
-                                the term.
-                                Interested in learning more? <a href="./src/assets/Gangl_161_Final_Report.pdf"
-                                    target="_blank">View the full report</a>.
-                            </p>
-                            <div class="button-space">
-                                <a href="https://www.youtube.com/watch?v=QaixSsK434s" target="_blank">
-                                    <button class="button-des" id="screaming-button">Check out the video</button>
+                                <a href="https://www.linkedin.com/in/sammy-robens-paradise/" target="_blank">
+                                    <button class="button-des" id="screaming-button">Linkedin</button>
                                 </a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="user-trigger-img-gangl"></div>
                     </div>
                 </div>
             </div>
