updated the component for initial pull request

--- a/index.html
+++ b/index.html
@@ -263,14 +263,14 @@
             <div class=row>
                 <div class="container" id="eccc-container">
                     <a href="https://www.canada.ca/en/environment-climate-change/corporate/mandate.html">
-                    <div class="col-sm-12 work-section-eccc" id="eccc-sec">
-                        <div class="eccc-section">
-                            <h2 class="section-p">Environment and Climate Change Canada - Winter 2018</h2>
-                            <p class="section-p">Worked on the software infrastructure behind
-                                Canada's Climate battle!</p>
+                        <div class="col-sm-12 work-section-eccc" id="eccc-sec">
+                            <div class="eccc-section">
+                                <h2 class="section-p">Environment and Climate Change Canada - Winter 2018</h2>
+                                <p class="section-p">Worked on the software infrastructure behind
+                                    Canada's Climate battle!</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
                 </div>
             </div>
         </div>
@@ -284,6 +284,21 @@
                     <p class="section-p cp">Last updated: <lastupdated id="last-updated"></lastupdated>
                     </p>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="mobile-support-coming" id="mobile-coming">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="center-text">
+                    <p>Hi there! I've just pushed a UI overhaul ☁️, and I hope you enjoy it! Not to worry, mobile scaling
+                        is on it's way. In the meantime, check out what's new!</p>
+                        <div class="button-space modal-button">
+                                <button class="button-des" id="close-dialog"
+                                    onclick="hideModal('mobile-coming')">Ok, got it thanks!</button>
+                            </div>
+                </div>
+
             </div>
         </div>
     </div>
