begain to implemement the mobile scaling

--- a/index.html
+++ b/index.html
@@ -141,21 +141,24 @@
             </h1>
             <div class="landing-image">
                 <div class="row">
-                    <div class="col-sm-6"></div>
-                    <div class="col-sm-6">
-                        <div class="landing-page-content">
-                            <p class="find-out-what-working-on">Find out what I've been working on!</p>
-                            <button class="button-des" id="projects-button"
-                                onclick="scrollToEl('projects',null)">Projects</button>
-                            <a id="href-a-to-sammy" href="https://sammy.world" target="_blank"><button
-                                    class="button-des" id="portfolio-button">Portfolio</button></a>
-                            <button class="button-des" id="work-button" onclick="scrollToEl('work',null)">Work</button>
-                            <a id="href-a-to-resume-dwld" href="./src/assets/resumeV16.pdf" target="_blank"><button
-                                    class="button-des" id="cv-button">Resume/CV</button></a>
-                        </div>
+                    <div class="col-md-6">
+                        <div class="landing-page-content"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="find-out-what-working-on">Find out what I've been working on!</p>
+                        <div class="center-content">
+                        <button class="button-des" id="projects-button"
+                            onclick="scrollToEl('projects',null)">Projects</button>
+                        <a id="href-a-to-sammy" href="https://sammy.world" target="_blank"><button class="button-des"
+                                id="portfolio-button">Portfolio</button></a>
+                        <button class="button-des" id="work-button" onclick="scrollToEl('work',null)">Work</button>
+                        <a id="href-a-to-resume-dwld" href="./src/assets/resumeV16.pdf" target="_blank"><button
+                                class="button-des" id="cv-button">Resume/CV</button></a>
+                            </div>
                     </div>
                 </div>
             </div>
+            <div class="spacer"></div>
         </div>
     </div>
     <div class="local-content" id="local-content-contain">
@@ -291,12 +294,13 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="center-text">
-                    <p>Hi there! I've just pushed a UI overhaul ☁️, and I hope you enjoy it! Not to worry, mobile scaling
+                    <p>Hi there! I've just pushed a UI overhaul ☁️, and I hope you enjoy it! Not to worry, mobile
+                        scaling
                         is on it's way. In the meantime, check out what's new!</p>
-                        <div class="button-space modal-button">
-                                <button class="button-des" id="close-dialog"
-                                    onclick="hideModal('mobile-coming')">Ok, got it thanks!</button>
-                            </div>
+                    <div class="button-space modal-button">
+                        <button class="button-des" id="close-dialog" onclick="hideModal('mobile-coming')">Ok, got it
+                            thanks!</button>
+                    </div>
                 </div>
 
             </div>
