--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                         <div class="col-sm-12 projects-section-bc-ferries" id="bc-ferries-sec">
 
                             <div class="bc-ferries-section">
-                                <h2 class="section-p">BC Ferries Case Study - Fall 2019</h2>
-                                <p class="section-p">A case study and redesign of the BC Ferries digital experience from
+                                <h2 class="section-p" id="bc-ferries-title">BC Ferries Case Study - Fall 2019</h2>
+                                <p class="section-p" id="bc-ferries-subtext">A case study and redesign of the BC Ferries digital experience from
                                     user
                                     interviews to cloud functions!</p>
                             </div>
@@ -189,8 +189,8 @@
                     <a href="portfolio.html">
                         <div class="col-sm-12 projects-section-portfolio" id="portfolio-sec">
                             <div class="portfolio-spring-2019">
-                                <h2 class="section-p">Portfolio - Spring 2019</h2>
-                                <p class="section-p">Check out my Spring 2019 portfolio built from the ground up using
+                                <h2 class="section-p" id="portfolio-title">Portfolio - Spring 2019</h2>
+                                <p class="section-p" id="portfolio-text">Check out my Spring 2019 portfolio built from the ground up using
                                     react.js
                                     and
                                     nifty design concepts!</p>
