added mobile scaling for bc ferries  page

--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -120,11 +120,12 @@
         <div class="col-sm-12">
             <h1 class="display-3">BC Ferries Redesign 2019</h1>
             <h1 class="display-4">A case study looking at improving the digital experience of BC ferries</h1>
-            <div class="landing-image-bc-ferries">
+            
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
+                            <div class="landing-image-bc-ferries"></div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <div class="text-container hov"  onclick="scrollToEl('timeline-out',null)">
                             <h2 class="bc-ferries-h2">
                                 Why The Case Study?
@@ -147,7 +148,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
         </div>
     </div>
     <div class="row">
@@ -190,11 +190,11 @@
             </div>
         </div>
     </div>
-    <div class="row section-descriptions">
-        <div class="col-sm-6">
-            <div class="user-interviews-img"></div>
+    <div class="row section-descriptions" id="user-interviews">
+        <div class="col-md-6">
+            <div class="user-interviews-img" id="user-interviews-image"></div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6" id="user-interviews-text">
             <div class="text-container">
                 <h2 class="bc-ferries-h2">
                     User Interviews: the Problem Space
@@ -212,7 +212,7 @@
         </div>
     </div>
     <div class="row section-descriptions">
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <div class="text-container left-side">
                 <h2 class="bc-ferries-h2">
                     Mockups and Prototypes
@@ -229,16 +229,15 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <div class="design-img"></div>
         </div>
     </div>
     <div class="row section-descriptions">
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <div class="coding-img"></div>
         </div>
-        <div class="col-sm-6">
-
+        <div class="col-md-6" id="design-development-text">
             <div class="text-container">
                 <h2 class="bc-ferries-h2">
                     Design and Development
@@ -260,7 +259,7 @@
         </div>
     </div>
     <div class="row section-descriptions">
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <div class="text-container left-side">
                 <h2 class="bc-ferries-h2">
                     Deployement and Feedback
@@ -277,7 +276,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <div class="deploy-img"></div>
         </div>
     </div>
