updated the portfolio-css and portfolio html page for mobile scaling

--- a/404.html
+++ b/404.html
@@ -39,13 +39,13 @@
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
-<body style="background-color:#0d0d0d;">
+<body style="background-color:#fff">
     <div class="container">
         <div class="row">
             <div class="col-sm-12" style="text-align: center;">
                 <br>
                 <div class="card" style="width: 100%;">
-                    <img class="card-img-top" src="./404error@2x.png" alt="Card image cap">
+                    <img class="card-img-top" src="./404error@2x.png" alt="Card image cap"style="mix-blend-mode: difference;opacity: 50%;">
                 </div>
                 <a style="text-align: center;" id="takemehome" href="./index.html">
                     Take me home...
