--- a/portfolio.html
+++ b/portfolio.html
@@ -123,10 +123,10 @@
             <div class="">
 
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-lg-6 center-image-">
                             <div class="user-trigger-img"></div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-lg-6">
                         <div class="text-container">
                             <h2 class="bc-ferries-h2">
                                 About the portfolio
