--- a/school-projects.html
+++ b/school-projects.html
@@ -40,7 +40,7 @@
         </script>
     <!-- Internal JavaScript main.js file-->
     <script src="index.js"></script>
-    <script src="portfolio.js"></script>
+    <script src="schoolprojects.js"></script>
 </head>
 
 <body>
@@ -123,10 +123,10 @@
             <div class="yeet">
 
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <div class="user-trigger-img"></div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6" id="screaming-safe-text">
                         <div class="text-container">
                             <h2 class="bc-ferries-h2">
                                 Arduino Screaming Safe
@@ -151,7 +151,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <div class="text-container left-side" id="how-it-works">
                             <h2 class="bc-ferries-h2">
                                 How Arduino Screaming Works
@@ -185,17 +185,17 @@
                         </div>
 
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <div class="user-trigger-img-top"></div>
                     </div>
                 </div>
                 <div class="spacer"></div>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <iframe class="arduino-screaming-embed" src="arduino_screaming.html">It Looks like your browser
                             does not support the <code>iframe tag :(</code></iframe>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6" id="safe-photo-gallery">
                         <div class="text-container">
                             <h2 class="bc-ferries-h2">
                                Safe, Photo Gallery
@@ -225,7 +225,7 @@
                 </div>
                 <div class="spacer"></div>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <div class="text-container left-side" id="how-it-works">
                             <h2 class="bc-ferries-h2">
                                 Gangl, Design Case Study
@@ -245,7 +245,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <div class="user-trigger-img-gangl"></div>
                     </div>
                 </div>
@@ -265,7 +265,7 @@
         </div>
     </div>
     <div class="bottom-padding"></div>
-    <script src="portfolio.js"></script>
+    <script src="schoolprojects.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.js"></script>
 </body>
 
