added rough mobile scaling for finger food webpage

--- a/finger-food-atg-projects.html
+++ b/finger-food-atg-projects.html
@@ -129,10 +129,10 @@
                             </div>
                 </div></div>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <div class="user-trigger-img" onclick="getMobileOperatingSystemAndOpen(1)"></div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6" id="technic-text">
                         <div class="text-container">
                             <h2 class="bc-ferries-h2 hov">
                                 LEGO ® TECHNIC ® Control+
@@ -164,7 +164,7 @@
     </div>
     <div class="spacer"></div>
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <div class="text-container left-side" id="sphero">
                 <h2 class="bc-ferries-h2">
                     Sphero EDU
@@ -187,7 +187,7 @@
                     </div>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <div class="user-trigger-img-sphero" onclick="getMobileOperatingSystemAndOpen(2)"></div>
         </div>
     </div>
