--- a/creations.html
+++ b/creations.html
@@ -74,7 +74,7 @@
                         target="_blank">Dribbble</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./src/assets/resumeV16.pdf" download="Sammy Robens-Paradise Resume"
+                    <a class="nav-link" href="./src/assets/Resume_fall_16_v2.pdf" download="Sammy Robens-Paradise Resume"
                         id="navbar_resume">Resume</a>
                 </li>
                 <li class="nav-item">
