--- a/school-projects.html
+++ b/school-projects.html
@@ -65,7 +65,7 @@
                 </li>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./src/assets/resumeV16.pdf" download="Sammy Robens-Paradise Resume"
+                    <a class="nav-link" href="./src/assets/Resume_fall_16_v2.pdf" download="Sammy Robens-Paradise Resume"
                         id="navbar_resume">Resume</a>
                 </li>
                 <li class="nav-item">
