added grape to landing page

--- a/index.html
+++ b/index.html
@@ -168,6 +168,20 @@
                     <h1 class="projects-header display-4" id="projects">Projects</h1>
                 </div>
             </div>
+            <!--New Section-->
+            <div class=row>
+                <div class="container" id="grape-container">
+                    <a href="https://grape-promo.firebaseapp.com">
+                        <div class="col-sm-12 projects-section-grape" id="grape-sec">
+                            <div class="grape-section">
+                                <h2 class="section-p" id="bc-ferries-title">Grape, Learn Code Better - Fall 2019</h2>
+                                <p class="section-p" id="bc-ferries-subtext">Grape, coming soon, will change the way  people learn to code.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!--New Section-->
             <div class=row>
                 <div class="container" id="bc-ferries-container">
                     <a href="bc-ferries-redesign.html">
