changed footer for new lib

--- a/index.html
+++ b/index.html
@@ -308,12 +308,9 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="center-text">
-                    <p>Hi there! I've just pushed a UI overhaul ☁️, and I hope you enjoy it! Not to worry, mobile
-                        scaling
-                        is on it's way. In the meantime, check out what's new!</p>
+                    <p>Hi there! Check out a new open source front-end react library I am working on called <code><a href='https://sammyrp.com/global-winery'>Global-winery</a></code>! Its also on <a href="https://www.npmjs.com/package/global-winery">npm</a> </p>
                     <div class="button-space modal-button">
-                        <button class="button-des" id="close-dialog" onclick="hideModal('mobile-coming')">Ok, got it
-                            thanks!</button>
+                        <button class="button-des" id="close-dialog" onclick="hideModal('mobile-coming')">Okay, cool!</button>
                     </div>
                 </div>
 
