added linting rules for better js

--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -65,8 +65,8 @@
                 </li>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./src/assets/Resume_fall_16_v2.pdf" download="Sammy Robens-Paradise Resume"
-                        id="navbar_resume">Resume</a>
+                    <a class="nav-link" href="./src/assets/Resume_fall_16_v2.pdf"
+                        download="Sammy Robens-Paradise Resume" id="navbar_resume">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./me.html" id="navbar_whos_sammy">Who's Sammy</a>
@@ -120,34 +120,34 @@
         <div class="col-sm-12">
             <h1 class="display-3">BC Ferries Redesign 2019</h1>
             <h1 class="display-4">A case study looking at improving the digital experience of BC ferries</h1>
-            
-                <div class="row">
-                    <div class="col-md-6">
-                            <div class="landing-image-bc-ferries"></div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="text-container hov"  onclick="scrollToEl('timeline-out',null)">
-                            <h2 class="bc-ferries-h2">
-                                Why The Case Study?
-                            </h2>
-                            <p class="why-the-case-study-para">
-                                <a href="https://www.bcferries.com" target="_blank">BC ferries</a> is the largest ferry
-                                service is canada and serves more than 6 million people
-                                annually. it is the life line for thousands of British Columbians across the province.
-                            </p>
-                            <p>Although BC Ferries plays a critical role in maintaining the lives of thousands of
-                                people,
-                                the service has failed to maintain and update their digital
-                                presence and provide a clear and positive digital user experience. As a British
-                                Columbian,
-                                and an engineer studying Systems Design, at the University of Waterloo,
-                                the potential for growth and improvement provided an inviting oppertunity for a
-                                re-design,
-                                examining the "pain points" for users during the digial experience
-                            </p>
-                        </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="landing-image-bc-ferries"></div>
+                </div>
+                <div class="col-md-6">
+                    <div class="text-container hov" onclick="scrollToEl('timeline-out',null)">
+                        <h2 class="bc-ferries-h2">
+                            Why The Case Study?
+                        </h2>
+                        <p class="why-the-case-study-para">
+                            <a href="https://www.bcferries.com" target="_blank">BC ferries</a> is the largest ferry
+                            service is canada and serves more than 6 million people
+                            annually. it is the life line for thousands of British Columbians across the province.
+                        </p>
+                        <p>Although BC Ferries plays a critical role in maintaining the lives of thousands of
+                            people,
+                            the service has failed to maintain and update their digital
+                            presence and provide a clear and positive digital user experience. As a British
+                            Columbian,
+                            and an engineer studying Systems Design, at the University of Waterloo,
+                            the potential for growth and improvement provided an inviting oppertunity for a
+                            re-design,
+                            examining the "pain points" for users during the digial experience
+                        </p>
                     </div>
                 </div>
+            </div>
         </div>
     </div>
     <div class="row">
@@ -167,16 +167,20 @@
                         <div class="timeline-init" id="timeline-4">
                             <p class="sec-t">4</p>
                         </div>
-                        <div class="timeline-s-des hov" id="timeline-description-1" onclick="scrollToEl('user-interviews',null)">
+                        <div class="timeline-s-des hov" id="timeline-description-1"
+                            onclick="scrollToEl('user-interviews',null)">
                             <p class="des-t">User interviews and brainstorming</p>
                         </div>
-                        <div class="timeline-s-des hov" id="timeline-description-2" onclick="scrollToEl('mockups-and-protos',null)">
+                        <div class="timeline-s-des hov" id="timeline-description-2"
+                            onclick="scrollToEl('mockups-and-protos',null)">
                             <p class="des-t">Mockups and prototypes</p>
                         </div>
-                        <div class="timeline-s-des hov" id="timeline-description-3" onclick="scrollToEl('design-and-deploy',null)">
+                        <div class="timeline-s-des hov" id="timeline-description-3"
+                            onclick="scrollToEl('design-and-deploy',null)">
                             <p class="des-t">Design and development</p>
                         </div>
-                        <div class="timeline-s-des hov" id="timeline-description-4" onclick="scrollToEl('release',null)">
+                        <div class="timeline-s-des hov" id="timeline-description-4"
+                            onclick="scrollToEl('release',null)">
                             <p class="des-t">Deployement and feedback</p>
                         </div>
                         <div class="timeline-s-des-b1" id="timeline-description-1-b"></div>
@@ -200,12 +204,10 @@
                     User Interviews: the Problem Space
                 </h2>
                 <p class="why-the-case-study-para" id="user-interviews">
-                    Before I even start designing and first conduct user interviews and walkthroughs.
+                    Before I even start designing I first conduct user interviews and walkthroughs.
                 </p>
-                <p> What type of user interviews? I spend a total of 6 hours on ferries conducting user interviews. I
-                    asked
-                    patrons of all ages and backgrounds about their experience using the BC Ferries website and where
-                    there frustrations were.
+                <p> I spent a total of 6 hours on ferries conducting user interviews. I asked patrons of all ages and
+                    backgrounds about their experience using the BC Ferries website and where there frustrations were.
                     Talking to stakeholders builds empathy with users and helps identify the key problems for users.
                 </p>
             </div>
@@ -218,13 +220,13 @@
                     Mockups and Prototypes
                 </h2>
                 <p class="why-the-case-study-para" id="mockups-and-protos">
-                    Once the problem space is defined, we can begin designing and prototyping solutions
+                    Once the problem space is defined, I will begin designing and prototyping solutions
                 </p>
                 <p>
-                    To prototype designs and wireframes, I use Adobe Experience Designer, Illustrator and Indesign to
+                    To prototype designs and wireframes, I use Adobe Experience Designer, Illustrator and Photoshop to
                     creat mockups and prototypes
-                    that I can present to users for feedback. using theses tools, designs can be quickly adjusted and
-                    iterated for improvements
+                    that I can present to users for feedback. using theses tools, I can quickly improve and
+                    iterate over design improvements
                     before development even starts.
                 </p>
             </div>
@@ -243,7 +245,7 @@
                     Design and Development
                 </h2>
                 <p class="why-the-case-study-para" id="design-and-deploy">
-                    With a stellar design, development and iterative testing can begin.
+                    With a stellar design, development and testing can begin.
                 </p>
                 <p>
                     The app will be built using <code>react.js</code> and <code>react-router-dom</code> as well as
